--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3 class="faq-title">
           What do you call someone with no body and no noce
         </h3>
-        <p class="faq-text">Now body knowa</p>
+        <p class="faq-text">Now body knows</p>
         <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i>
           <i class="fas fa-times"></i>
